alch enhancements changes for balance (#3104)